[package]
name = "sphere_pack_from_json"
version = "0.1.0"
authors = ["Jay Hilton"]
edition = "2018"

[dependencies]
clap = "~2.27.0"
nalgebra = "0.24.1"
rand = "0.6.5"  # using old version because spherical-cow uses old version
serde_json = "1.0.62"
thiserror = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
spherical-cow = "0.1.2"

[patch.crates-io]
# use a fork without dependency on nightly until changes are pushed to crates.io
spherical-cow = { git = "https://github.com/Libbum/spherical-cow"}
