[package]
name = "sphere_pack_from_json"
description = "A binary used to simulate sphere packing with varying discrete proportions of different sphere sizes"
license-file = "LICENSE"
version = "0.1.0"
authors = ["Jay Hilton"]
edition = "2018"

[dependencies]
clap = "~2.27.0"
nalgebra = "0.24.1"
rand = "0.8.3"
serde_json = "1.0.62"
thiserror = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
spherical-cow = "0.1.2"
